--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,120 @@
-# Core
+absl-py==2.3.1
+altair==5.5.0
+annotated-doc==0.0.3
+annotated-types==0.7.0
+anyio==4.11.0
+astunparse==1.6.3
+attrs==25.4.0
+blinker==1.9.0
+boto3==1.36.10
+botocore==1.36.10
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+cloudpickle==3.1.1
+colorama==0.4.6
+contourpy==1.3.3
+coverage==7.6.12
+cramjam==2.11.0
+cryptography==46.0.3
+cycler==0.12.1
+docutils==0.16
+Farama-Notifications==0.0.4
+fastapi==0.120.1
+fastparquet==2024.11.0
+filelock==3.20.0
+Flask==3.1.2
+flatbuffers==25.9.23
+fonttools==4.60.1
+fsspec==2025.9.0
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-pasta==0.2.0
+grpcio==1.76.0
+gym==0.26.2
+gym-notices==0.1.0
+gymnasium==1.2.1
+h11==0.16.0
+h5py==3.15.1
+idna==3.11
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jmespath==1.0.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kafka-python==2.2.15
+keras==3.12.0
+kiwisolver==1.4.9
+libclang==18.1.1
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.1.0
+narwhals==2.10.0
+networkx==3.5
+numpy==1.26.4
+opt_einsum==3.4.0
+optree==0.17.0
+packaging==24.2
+paho-mqtt==2.1.0
+pandas==2.3.3
+pillow==11.3.0
+pluggy==1.5.0
+protobuf==4.25.8
+py4j==0.10.9.7
+pyarrow==22.0.0
+pyasn1==0.6.1
+pycparser==2.23
+pydantic==2.12.3
+pydantic_core==2.41.4
+pydeck==0.9.1
+Pygments==2.19.2
+pyparsing==3.2.5
 pyspark==3.5.0
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-
-# Streaming
-kafka-python>=2.0.2
-paho-mqtt>=1.6.1
-
-# Cloud
-boto3>=1.28.0
-google-cloud-dataproc>=5.4.0
-azure-mgmt-synapse>=2.0.0
-
-# ML/DL (M2 optimized)
-torch>=2.0.0
-tensorflow-macos>=2.13.0
-tensorflow-metal>=1.0.0
-
-# RL
-gym>=0.26.0
-stable-baselines3>=2.0.0
-
-# Web
-flask>=2.3.0
-streamlit>=1.25.0
-fastapi>=0.100.0
-
-# Data
-pyarrow>=12.0.0
-fastparquet>=2023.0.0
-
-# Utils
-pyyaml>=6.0
-python-dotenv>=1.0.0
-requests>=2.31.0
-tqdm>=4.65.0
+pytest==8.3.5
+pytest-cov==6.0.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+requests==2.32.5
+rich==14.2.0
+rpds-py==0.28.0
+rsa==4.7.2
+s3transfer==0.11.2
+setuptools==72.1.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+stable_baselines3==2.7.0
+starlette==0.48.0
+streamlit==1.50.0
+sympy==1.14.0
+tenacity==9.1.2
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.2
+tensorflow-macos==2.16.2
+tensorflow-metal==1.2.0
+termcolor==3.2.0
+toml==0.10.2
+torch==2.9.0
+tornado==6.5.2
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.3.0
+uvicorn==0.38.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.0
